[WIP] Migrate to JDK 21